{
    "name": "UniveralPlayerInputActions",
    "maps": [
        {
            "name": "PlayerClicking",
            "id": "3ae50ac2-4521-4057-aa4f-006fc48c3e4c",
            "actions": [
                {
                    "name": "Click",
                    "type": "Button",
                    "id": "01c42468-c092-4759-8f6f-c6c28ad79dac",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "fdd5eb47-4925-46ff-8606-93db7063e2c3",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}